k8s/moneyboy.yml
apiVersion: v1
kind: Namespace
metadata:
    name: moneyboy-server

---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        io.kompose.service: moneyboy-server-db-deployment
    name: moneyboy-server-db-deployment
    namespace: moneyboy-server
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: moneyboy-server-db-deployment
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                io.kompose.service: moneyboy-server-db-deployment
        spec:
            containers:
                - args:
                      - --default-authentication-plugin=mysql_native_password
                  image: mysql
                  name: moneyboy-server-db
                  ports:
                      - containerPort: 3306
                        name: mysql
                  resources: {}
                  # TODO: Get env vars from secret
                  volumeMounts:
                      - mountPath: /var/lib/mysql
                        name: moneyboy-server-db-claim
            restartPolicy: Always
            volumes:
                - name: moneyboy-server-db-claim
                  persistentVolumeClaim:
                      claimName: moneyboy-server-db-claim
status: {}

---
apiVersion: v1
kind: Service
metadata:
    labels:
        io.kompose.service: moneyboy-server-db-service
    name: moneyboy-server-db-service
    namespace: moneyboy-server
spec:
    ports:
        - name: "3306"
          port: 3306
          targetPort: 3306
    selector:
        io.kompose.service: moneyboy-server-db-deployment
status:
    loadBalancer: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        io.kompose.service: moneyboy-server-deployment
    name: moneyboy-server-deployment
    namespace: moneyboy-server
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: moneyboy-server-deployment
    strategy: {}
    template:
        metadata:
            labels:
                io.kompose.service: moneyboy-server-deployment
        spec:
            containers:
                - image: ghcr.io/pesca-dev/moneyboy-server
                  imagePullPolicy: Always
                  name: moneyboy-server-deployment
                  ports:
                      - containerPort: 3000
                  resources: {}
            restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
    labels:
        io.kompose.service: moneyboy-server-service
    name: moneyboy-server-service
    namespace: moneyboy-server
spec:
    ports:
        - protocol: TCP
          name: web
          port: 3000
    selector:
        io.kompose.service: moneyboy-server-deployment
status:
    loadBalancer: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: moneyboy-server-ingress
    namespace: moneyboy-server
spec:
    entryPoints:
        - websecure
    routes:
        - match: Host(`rytlock.pesca.dev`)
          kind: Rule
          services:
              - name: moneyboy-server-service
                port: 3000
    tls:
        certResolver: le
